# tokio-axum-csv-demo

./: Cargo.toml  ReadME.md
examples/: axum_csv_server.rs  simple_axum_server.rs  simple_benchmark.rs  sync_vs_async_benchmark.rs  tokio_csv_demo.rs
sample_data/: small_data.csv
src/: csv_generator.rs  performance_utils.rs
